--- a/index.html
+++ b/index.html
@@ -70,6 +70,6 @@
 </head>
   <body class="bg-ease-white font-sans">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
